Improve homepage style and add social media buttons

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>JV.SB x SOSO MANAGEUR</title>
+
+  <!-- Font Awesome (icônes réseaux) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,6 +15,21 @@
   <img src="https://zupimages.net/up/25/47/f2eb.png" class="logo">
   <h1>JV.SB x SOSO MANAGEUR</h1>
   <p>Solutions premium pour serveurs FiveM</p>
+
+  <!-- BOUTONS RÉSEAUX -->
+  <div class="social-links">
+    <a href="https://www.youtube.com/@JV_SB" target="_blank" class="social youtube">
+      <i class="fa-brands fa-youtube"></i> YouTube
+    </a>
+
+    <a href="https://www.tiktok.com/@adz13.835b" target="_blank" class="social tiktok">
+      <i class="fa-brands fa-tiktok"></i> TikTok
+    </a>
+
+    <a href="https://discord.gg/kWbMNZxAMj" target="_blank" class="social discord">
+      <i class="fa-brands fa-discord"></i> Discord
+    </a>
+  </div>
 </header>
 
 <section class="categories">
