Improve homepage style and add social media buttons

--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <title>JV.SB x SOSO MANAGEUR</title>
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header class="header">
-  <img src="https://zupimages.net/up/25/47/f2eb.png" class="logo">
+  <img src="https://zupimages.net/up/25/47/f2eb.png" alt="JV.SB Logo" class="logo">
   <h1>JV.SB x SOSO MANAGEUR</h1>
   <p>Solutions premium pour serveurs FiveM</p>
 
