--- a/index.html
+++ b/index.html
@@ -1,36 +1,75 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
   <title>JV.SB x SOSO MANAGEUR</title>
+
+  <!-- Icônes réseaux -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+  <!-- Style principal -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header class="header">
-  <img src="https://zupimages.net/up/25/47/f2eb.png" alt="JV.SB Logo" class="logo">
+  <!-- LOGO LOCAL (OBLIGATOIRE) -->
+  <img src="images/logo.png" alt="JV.SB Logo" class="logo">
+
   <h1>JV.SB x SOSO MANAGEUR</h1>
   <p>Solutions premium pour serveurs FiveM</p>
 
+  <!-- BOUTONS RÉSEAUX -->
   <div class="social-links">
-    <a href="#" class="social youtube"><i class="fa-brands fa-youtube"></i>YouTube</a>
-    <a href="#" class="social tiktok"><i class="fa-brands fa-tiktok"></i>TikTok</a>
-    <a href="#" class="social discord"><i class="fa-brands fa-discord"></i>Discord</a>
+    <a href="https://www.youtube.com/@JV_SB" target="_blank" class="social youtube">
+      <i class="fa-brands fa-youtube"></i> YouTube
+    </a>
+
+    <a href="https://www.tiktok.com/@adz13.835b" target="_blank" class="social tiktok">
+      <i class="fa-brands fa-tiktok"></i> TikTok
+    </a>
+
+    <a href="https://discord.gg/kWbMNZxAMj" target="_blank" class="social discord">
+      <i class="fa-brands fa-discord"></i> Discord
+    </a>
   </div>
 </header>
 
 <section class="categories">
-  <div class="card blue">Upgrade Communauté</div>
-  <div class="card red">Développement FiveM</div>
-  <div class="card purple">Pack Ultime</div>
+  <div class="card blue">
+    <h2>Upgrade Communauté</h2>
+    <p>
+      Optimisation serveur<br>
+      Amélioration RP<br>
+      Performance & stabilité
+    </p>
+  </div>
+
+  <div class="card red">
+    <h2>Développement FiveM</h2>
+    <p>
+      Scripts sur mesure<br>
+      UI / HUD<br>
+      Systèmes avancés
+    </p>
+  </div>
+
+  <div class="card purple">
+    <h2>Pack Ultime</h2>
+    <p>
+      Upgrade Communauté<br>
+      + Développement FiveM<br>
+      Solution complète
+    </p>
+  </div>
 </section>
 
 <footer>
-  © 2025/2026 • JV.SB x SOSO MANAGEUR • Tous droits réservés
+  <p>© 2025/2026 • JV.SB x SOSO MANAGEUR • Tous droits réservés</p>
 </footer>
 
+<!-- ANIMATION AU SCROLL -->
 <script src="scroll.js"></script>
+
 </body>
 </html>
