Make service cards clickable and add future article pages

--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
 <body>
 
 <header class="header">
-  <!-- LOGO LOCAL (OBLIGATOIRE) -->
   <img src="images/logo.png" alt="JV.SB Logo" class="logo">
 
   <h1>JV.SB x SOSO MANAGEUR</h1>
   <p>Solutions premium pour serveurs FiveM</p>
 
-  <!-- BOUTONS RÉSEAUX -->
   <div class="social-links">
     <a href="https://www.youtube.com/@JV_SB" target="_blank" class="social youtube">
       <i class="fa-brands fa-youtube"></i> YouTube
@@ -36,40 +34,46 @@
 </header>
 
 <section class="categories">
-  <div class="card blue">
-    <h2>Upgrade Communauté</h2>
-    <p>
-      Optimisation serveur<br>
-      Amélioration RP<br>
-      Performance & stabilité
-    </p>
-  </div>
 
-  <div class="card red">
-    <h2>Développement FiveM</h2>
-    <p>
-      Scripts sur mesure<br>
-      UI / HUD<br>
-      Systèmes avancés
-    </p>
-  </div>
+  <a href="pages/upgrade.html" target="_blank" class="card-link">
+    <div class="card blue">
+      <h2>Upgrade Communauté</h2>
+      <p>
+        Optimisation serveur<br>
+        Amélioration RP<br>
+        Performance & stabilité
+      </p>
+    </div>
+  </a>
 
-  <div class="card purple">
-    <h2>Pack Ultime</h2>
-    <p>
-      Upgrade Communauté<br>
-      + Développement FiveM<br>
-      Solution complète
-    </p>
-  </div>
+  <a href="pages/fivem.html" target="_blank" class="card-link">
+    <div class="card red">
+      <h2>Développement FiveM</h2>
+      <p>
+        Scripts sur mesure<br>
+        UI / HUD<br>
+        Systèmes avancés
+      </p>
+    </div>
+  </a>
+
+  <a href="pages/pack-ultime.html" target="_blank" class="card-link">
+    <div class="card purple">
+      <h2>Pack Ultime</h2>
+      <p>
+        Upgrade Communauté<br>
+        + Développement FiveM<br>
+        Solution complète
+      </p>
+    </div>
+  </a>
+
 </section>
 
 <footer>
   <p>© 2025/2026 • JV.SB x SOSO MANAGEUR • Tous droits réservés</p>
 </footer>
 
-<!-- ANIMATION AU SCROLL -->
 <script src="scroll.js"></script>
-
 </body>
 </html>
