Make service cards clickable and add future article pages

--- a/pages/upgrade.html
+++ b/pages/upgrade.html
@@ -2,13 +2,31 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Upgrade Communauté</title>
+  <title>Upgrade Communauté - Tarifs</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+
+<header class="header">
   <h1>Upgrade Communauté</h1>
-  <article>
-    <p>Les articles et mises à jour seront ajoutés prochainement.</p>
-  </article>
+  <p>Nos offres et tarifs</p>
+</header>
+
+<section class="pricing">
+
+  <!-- IMAGE TARIFS -->
+  <img src="../images/image1.png" alt="Tarifs Upgrade Communauté" class="pricing-image">
+
+  <!-- BOUTON PAYPAL -->
+  <a href="https://paypal.me/JvsbXsoso" target="_blank" class="paypal-btn">
+    💳 Payer avec PayPal
+  </a>
+
+</section>
+
+<footer>
+  <p>© 2025/2026 • JV.SB x SOSO MANAGEUR</p>
+</footer>
+
 </body>
 </html>
