Make service cards clickable and add future article pages

--- a/pages/fivem.html
+++ b/pages/fivem.html
@@ -3,12 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <title>Développement FiveM</title>
+
   <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+
+<header class="header">
   <h1>Développement FiveM</h1>
-  <article>
-    <p>Contenu et articles techniques à venir.</p>
-  </article>
+  <p>Services et articles à venir</p>
+</header>
+
+<section class="pricing">
+
+  <p>Les contenus et tarifs seront ajoutés prochainement.</p>
+
+  <a href="../index.html" class="back-btn">
+    ⬅ Retour à l’accueil
+  </a>
+
+</section>
+
+<footer>
+  <p>© 2025/2026 • JV.SB x SOSO MANAGEUR</p>
+</footer>
+
 </body>
 </html>
