--- a/pages/pack-ultime.html
+++ b/pages/pack-ultime.html
@@ -3,12 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <title>Pack Ultime</title>
+
   <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+
+<header class="header">
   <h1>Pack Ultime</h1>
-  <article>
-    <p>Présentation complète et offres à venir.</p>
-  </article>
+  <p>Offre complète clé en main</p>
+</header>
+
+<section class="pricing">
+
+  <p>Les détails et tarifs du Pack Ultime seront bientôt disponibles.</p>
+
+  <a href="../index.html" class="back-btn">
+    ⬅ Retour à l’accueil
+  </a>
+
+</section>
+
+<footer>
+  <p>© 2025/2026 • JV.SB x SOSO MANAGEUR</p>
+</footer>
+
 </body>
 </html>
