--- a/pages/upgrade.html
+++ b/pages/upgrade.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Upgrade Communauté - Tarifs</title>
+
   <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
@@ -14,12 +16,14 @@
 
 <section class="pricing">
 
-  <!-- IMAGE TARIFS -->
   <img src="../images/image1.png" alt="Tarifs Upgrade Communauté" class="pricing-image">
 
-  <!-- BOUTON PAYPAL -->
   <a href="https://paypal.me/JvsbXsoso" target="_blank" class="paypal-btn">
-    💳 Payer avec PayPal
+    <i class="fa-brands fa-paypal"></i> Payer avec PayPal
+  </a>
+
+  <a href="../index.html" class="back-btn">
+    ⬅ Retour à l’accueil
   </a>
 
 </section>
