Make service cards clickable and add future article pages

--- a/pages/fivem.html
+++ b/pages/fivem.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Développement FiveM</title>
+  <title>Développement FiveM - Tarifs</title>
 
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -11,13 +11,28 @@
 
 <header class="header">
   <h1>Développement FiveM</h1>
-  <p>Services et articles à venir</p>
+  <p>Nos formules et tarifs</p>
 </header>
 
 <section class="pricing">
 
-  <p>Les contenus et tarifs seront ajoutés prochainement.</p>
+  <!-- FORMULE 1 -->
+  <img src="../images/formule1.png" alt="Formule FiveM à la carte" class="pricing-image">
 
+  <a href="https://paypal.me/JvsbXsoso" target="_blank" class="paypal-btn">
+    <i class="fa-brands fa-paypal"></i> Payer avec PayPal
+  </a>
+
+  <hr class="pricing-separator">
+
+  <!-- FORMULE 2 -->
+  <img src="../images/formule2.png" alt="Formule FiveM complète mensuelle" class="pricing-image">
+
+  <a href="https://paypal.me/JvsbXsoso" target="_blank" class="paypal-btn">
+    <i class="fa-brands fa-paypal"></i> Payer avec PayPal
+  </a>
+
+  <!-- RETOUR -->
   <a href="../index.html" class="back-btn">
     ⬅ Retour à l’accueil
   </a>
