Make service cards clickable and add future article pages

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <img src="images/logo.png" alt="JV.SB Logo" class="logo">
 
   <h1>JV.SB x SOSO MANAGEUR</h1>
-  <p>Solutions premium pour serveurs FiveM</p>
+  <p>Solutions premium pour vos serveurs FiveM</p>
 
   <div class="social-links">
     <a href="https://www.youtube.com/@JV_SB" target="_blank" class="social youtube">
@@ -39,9 +39,9 @@
     <div class="card blue">
       <h2>Upgrade Communauté</h2>
       <p>
-        Optimisation serveur<br>
-        Amélioration RP<br>
-        Performance & stabilité
+        Des Formules<br>
+        pour Upgrade<br>
+        ta Communauté en jeux & sur les Reseaux !
       </p>
     </div>
   </a>
@@ -50,9 +50,9 @@
     <div class="card red">
       <h2>Développement FiveM</h2>
       <p>
-        Scripts sur mesure<br>
-        UI / HUD<br>
-        Systèmes avancés
+        Scripts sur Mesure<br>
+        Formule Mensuel ou a la Carte<br>
+        Developpement Certififer Pro pour ton Serveur FiveM !
       </p>
     </div>
   </a>
