Make service cards clickable and add future article pages

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <video id="background-video" autoplay loop muted playsinline>
+    <source src="video/video1.mp4" type="video/mp4">
+  </video>
 
 <header class="header">
-  <img src="images/logo.png" alt="JV.SB Logo" class="logo">
-
   <h1>JV.SB x SOSO MANAGEUR</h1>
   <p>Solutions premium pour vos serveurs FiveM</p>
 
