--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <video id="background-video" autoplay loop muted playsinline>
+  <video id="background-video" autoplay loop playsinline>
     <source src="video/video1.mp4" type="video/mp4">
   </video>
 
