Make service cards clickable and add future article pages

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <section class="categories">
 
-  <a href="pages/upgrade.html" target="_blank" class="card-link">
+  <a href="pages/upgrade.html" class="card-link">
     <div class="card blue">
       <h2>Upgrade Communauté</h2>
       <p>
@@ -47,7 +47,7 @@
     </div>
   </a>
 
-  <a href="pages/fivem.html" target="_blank" class="card-link">
+  <a href="pages/fivem.html" class="card-link">
     <div class="card red">
       <h2>Développement FiveM</h2>
       <p>
@@ -58,7 +58,7 @@
     </div>
   </a>
 
-  <a href="pages/pack-ultime.html" target="_blank" class="card-link">
+  <a href="pages/pack-ultime.html" class="card-link">
     <div class="card purple">
       <h2>Pack Ultime</h2>
       <p>
