--- a/index.html
+++ b/index.html
@@ -19,56 +19,72 @@
   <h1>JV.SB x SOSO MANAGEUR</h1>
   <p>Solutions premium pour vos serveurs FiveM</p>
 
-  <div class="social-links">
-    <a href="https://www.youtube.com/@JV_SB" target="_blank" class="social youtube">
-      <i class="fa-brands fa-youtube"></i> YouTube
-    </a>
+  <div class="accordion">
+    <button class="accordion-btn" id="social-accordion">
+      <i class="fa-solid fa-share-nodes"></i> Réseaux sociaux
+      <i class="fa-solid fa-chevron-down accordion-icon"></i>
+    </button>
+    <div class="accordion-content" id="social-content">
+      <div class="social-links">
+        <a href="https://www.youtube.com/@JV_SB" target="_blank" class="social youtube">
+          <i class="fa-brands fa-youtube"></i> YouTube
+        </a>
 
-    <a href="https://www.tiktok.com/@adz13.835b" target="_blank" class="social tiktok">
-      <i class="fa-brands fa-tiktok"></i> TikTok
-    </a>
+        <a href="https://www.tiktok.com/@adz13.835b" target="_blank" class="social tiktok">
+          <i class="fa-brands fa-tiktok"></i> TikTok
+        </a>
 
-    <a href="https://discord.gg/kWbMNZxAMj" target="_blank" class="social discord">
-      <i class="fa-brands fa-discord"></i> Discord
-    </a>
+        <a href="https://discord.gg/kWbMNZxAMj" target="_blank" class="social discord">
+          <i class="fa-brands fa-discord"></i> Discord
+        </a>
+      </div>
+    </div>
   </div>
 </header>
 
-<section class="categories">
+<section class="services-section">
+  <div class="accordion">
+    <button class="accordion-btn" id="services-accordion">
+      <i class="fa-solid fa-briefcase"></i> Nos services
+      <i class="fa-solid fa-chevron-down accordion-icon"></i>
+    </button>
+    <div class="accordion-content" id="services-content">
+      <div class="categories">
+        <a href="pages/upgrade.html" class="card-link">
+          <div class="card blue">
+            <h2>Upgrade Communauté</h2>
+            <p>
+              Des Formules<br>
+              pour Upgrade<br>
+              ta Communauté en jeux & sur les Reseaux !
+            </p>
+          </div>
+        </a>
 
-  <a href="pages/upgrade.html" class="card-link">
-    <div class="card blue">
-      <h2>Upgrade Communauté</h2>
-      <p>
-        Des Formules<br>
-        pour Upgrade<br>
-        ta Communauté en jeux & sur les Reseaux !
-      </p>
+        <a href="pages/fivem.html" class="card-link">
+          <div class="card red">
+            <h2>Développement FiveM</h2>
+            <p>
+              Scripts sur Mesure<br>
+              Formule Mensuel ou a la Carte<br>
+              Developpement Certififer Pro pour ton Serveur FiveM !
+            </p>
+          </div>
+        </a>
+
+        <a href="pages/pack-ultime.html" class="card-link">
+          <div class="card purple">
+            <h2>Pack Ultime</h2>
+            <p>
+              Upgrade Communauté<br>
+              + Développement FiveM<br>
+              Solution complète
+            </p>
+          </div>
+        </a>
+      </div>
     </div>
-  </a>
-
-  <a href="pages/fivem.html" class="card-link">
-    <div class="card red">
-      <h2>Développement FiveM</h2>
-      <p>
-        Scripts sur Mesure<br>
-        Formule Mensuel ou a la Carte<br>
-        Developpement Certififer Pro pour ton Serveur FiveM !
-      </p>
-    </div>
-  </a>
-
-  <a href="pages/pack-ultime.html" class="card-link">
-    <div class="card purple">
-      <h2>Pack Ultime</h2>
-      <p>
-        Upgrade Communauté<br>
-        + Développement FiveM<br>
-        Solution complète
-      </p>
-    </div>
-  </a>
-
+  </div>
 </section>
 
 <footer>
@@ -93,6 +109,26 @@
   document.addEventListener('scroll', activateSound, { once: true });
   document.addEventListener('touchstart', activateSound, { once: true });
   document.addEventListener('keydown', activateSound, { once: true });
+
+  // Gestion des accordéons (volets)
+  const socialAccordion = document.getElementById('social-accordion');
+  const socialContent = document.getElementById('social-content');
+  const servicesAccordion = document.getElementById('services-accordion');
+  const servicesContent = document.getElementById('services-content');
+
+  if (socialAccordion && socialContent) {
+    socialAccordion.addEventListener('click', () => {
+      socialAccordion.classList.toggle('active');
+      socialContent.classList.toggle('active');
+    });
+  }
+
+  if (servicesAccordion && servicesContent) {
+    servicesAccordion.addEventListener('click', () => {
+      servicesAccordion.classList.toggle('active');
+      servicesContent.classList.toggle('active');
+    });
+  }
 </script>
 </body>
 </html>
