Make service cards clickable and add future article pages

--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
   <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
 
   <!-- Icônes réseaux -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" media="print" onload="this.media='all'">
-  <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"></noscript>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <!-- Style principal -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <video id="background-video" autoplay loop muted playsinline preload="metadata" poster="">
+  <video id="background-video" autoplay loop muted playsinline preload="metadata">
     <source src="video/video1.mp4" type="video/mp4">
   </video>
 
